--- a/docs/docs/api/client/typescript/classes/action-chain.mdx
+++ b/docs/docs/api/client/typescript/classes/action-chain.mdx
@@ -14,10 +14,7 @@ This class is used when you want to run multiple actions in a row in [`Game Cont
 
 ### appQuit <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Quit the app.
 
@@ -41,10 +38,7 @@ await gamium.actions().appQuit().perform();
 
 ### click <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Add the action of clicking on the screen coordinates to the Action Chain.
 
@@ -68,10 +62,7 @@ await gamium.actions().click({ x: 0, y: 0 }).perform();
 
 ### drag <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Adds an action to ActionChain that drags from one coordinate to another coordinate.
 
@@ -97,10 +88,7 @@ await gamium.actions().drag({ x: 0, y: 0 }, { x: 0, y: 10 }).perform();
 
 ### move <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Add the action of moving the mouse to a specific coordinate to the Action Chain.
 
@@ -124,10 +112,7 @@ await gamium.actions().move({ x: 0, y: 0 }).perform();
 
 ### movePlayer <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Adds an action to the Action Chain that moves the Player to a specific position.
 
@@ -163,10 +148,7 @@ await gamium
 
 ### perform <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Request actions registered in the AccrtionChain to 'Gamium Engine'.
 
@@ -178,10 +160,7 @@ Request actions registered in the AccrtionChain to 'Gamium Engine'.
 
 ### scroll <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Adds an action to ActionChain that scrolls by delta from a specific coordinate.
 
@@ -207,10 +186,7 @@ await gamium.actions().scroll({ x: 0, y: 0 }, { x: 0, y: 10 }).perform();
 
 ### sendKeys <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Adds an action to ActionChain that causes specific keystrokes to occur.
 
@@ -237,10 +213,7 @@ await game
 
 ### setText <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Adds an action to ActionChain to enter text for a specific object.
 
@@ -269,10 +242,7 @@ await gamium
 
 ### sleep <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Add an empty time in the middle of the ActionChain.
 
