--- a/docs/docs/api/client/typescript/classes/by.mdx
+++ b/docs/docs/api/client/typescript/classes/by.mdx
@@ -14,13 +14,7 @@ Class used by [Identifying GamiumObject](gamium/client/object-path).
 
 ### path <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 Use the Object Path to locate the object.
 
@@ -30,21 +24,9 @@ Use the Object Path to locate the object.
 const cameraObj = await gamium.findObject(By.path('/Main Camera[1]'));
 ```
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 ##### Arguments <s generated />
 
@@ -60,13 +42,7 @@ const cameraObj = await gamium.findObject(By.path('/Main Camera[1]'));
 
 ### tag <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 Use the Object Tag to locate the object.
 
@@ -76,21 +52,9 @@ Use the Object Tag to locate the object.
 const cameraObj = await gamium.findObject(By.tag('MainCamera'));
 ```
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 ##### Arguments <s generated />
 
