--- a/docs/docs/api/client/typescript/classes/player.mdx
+++ b/docs/docs/api/client/typescript/classes/player.mdx
@@ -14,10 +14,7 @@ Indicates the player that the user plays.
 
 ### isNear <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Verify that the GameObject and other GameObject are within a certain distance.
 
@@ -44,10 +41,7 @@ await player.isNear(By.path('Another object path'), { epsilon: 10 });
 
 ### move <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Move the Player to a specific position.
 
@@ -76,10 +70,7 @@ await player.move(By.path('Camera object path'), By.path('Dest Object path'), {
 
 ### refresh <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Updates the information that the object has.
 
