--- a/docs/docs/api/client/typescript/classes/rpc-by.mdx
+++ b/docs/docs/api/client/typescript/classes/rpc-by.mdx
@@ -14,13 +14,7 @@ Class used by [Remote Procedure Call](gamium/client/rpc) when calling remote fun
 
 ### field <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 Gets the value of a specific field
 
@@ -32,21 +26,9 @@ const field = await gamium.executeRpc(
 );
 ```
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 ##### Arguments <s generated />
 
@@ -62,13 +44,7 @@ const field = await gamium.executeRpc(
 
 ### method <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 Invokes a specific function.
 
@@ -80,21 +56,9 @@ await gamium.executeRpc(
 );
 ```
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 ##### Arguments <s generated />
 
@@ -112,13 +76,7 @@ await gamium.executeRpc(
 
 ### property <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 Get the value of specific professional profile
 
@@ -130,21 +88,9 @@ const property = await gamium.executeRpc(
 );
 ```
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 ##### Arguments <s generated />
 
