--- a/docs/docs/api/client/typescript/classes/ui-element.mdx
+++ b/docs/docs/api/client/typescript/classes/ui-element.mdx
@@ -12,10 +12,7 @@ toc_max_heading_level: 4
 
 ### click <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Click UIElement.
 
@@ -39,10 +36,7 @@ await okButton.click();
 
 ### drag <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Drag the UIElement.
 
@@ -74,10 +68,7 @@ await handle.drag(
 
 ### getText <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Import text if it is a UIElement that has text.
 
@@ -96,10 +87,7 @@ const progress = questObject.getText();
 
 ### isInteractable <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Verify that UIElement is interactive. To return to true, you must pass a number of conditions. Option allows you to override some conditions.
 
@@ -122,10 +110,7 @@ const isInteractable = await okButton.isInteractable();
 
 ### refresh <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Updates the information that the object has.
 
@@ -144,10 +129,7 @@ await okButton.refresh();
 
 ### scroll <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Scroll by delta from UIElement.
 
@@ -173,10 +155,7 @@ await dragger.scroll({ x: 0, y: -0.5 }, { durationMs: 2000 });
 
 ### setText <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Enter text in UIElement.
 
@@ -201,10 +180,7 @@ await text1.setText('Hello World').perform();
 
 ### tryIsInteractable <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 ##### Arguments <s generated />
 
@@ -218,10 +194,7 @@ await text1.setText('Hello World').perform();
 
 ### tryWaitInteractable <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 ##### Arguments <s generated />
 
@@ -235,10 +208,7 @@ await text1.setText('Hello World').perform();
 
 ### waitInteractable <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Wait for UIElement to interact..
 
