--- a/docs/docs/api/client/typescript/classes/ui.mdx
+++ b/docs/docs/api/client/typescript/classes/ui.mdx
@@ -14,10 +14,7 @@ toc_max_heading_level: 4
 
 ### click <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Wait for the specified object to be found through [`Locator`](../types/locator). If the object is found, wait until interaction is possible. Click if interaction is possible.
 
@@ -41,10 +38,7 @@ await ui.click(By.path('Object path'));
 
 ### drag <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Wait for the specified object to be found through [`Locator`](../types/locator). If the object is found, wait until interaction is possible. If interaction is possible, start the drag.
 
@@ -74,10 +68,7 @@ await ui.drag(By.path('Object path'), { x: 0, y: 0 });
 
 ### find <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Wait for the specified object to be found through [`Locator`](../types/locator). If an object is found, it is considered to be [`UIElement`] (ui-element) and returns the object
 
@@ -101,10 +92,7 @@ const elem = await ui.find(By.path('Object path'));
 
 ### finds <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Finds the objects specified through [`Locator`](../types/locator). If the objects are found, consider them as [`UIelement`](ui-element) and return the objects
 
@@ -128,10 +116,7 @@ const elems = await ui.finds(By.path('Object path'));
 
 ### getText <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Wait for the specified object to be found through [`Locator`](../types/locator). If the object is found, wait until interaction is possible. Returns Text if interaction is possible and Text exists.
 
@@ -155,10 +140,7 @@ const progress = await ui.getText(By.path('Object path'));
 
 ### scroll <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Wait for the specified object to be found through ['Locator'](../types/locator). If the object is found, wait until interaction is possible. Start scrolling if interaction is possible.
 
@@ -186,10 +168,7 @@ await ui.scroll(By.path('Object path'), { x: 0, y: -0.1 });
 
 ### setText <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 Wait for the specified object to be found through ['Locator'](../types/locator). If the object is found, wait until interaction is possible. If you can interact and type Text, type Text.
 
@@ -215,10 +194,7 @@ await ui.setText(By.path('Object path'), 'Hello, World!');
 
 ### tryFind <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 ##### Arguments <s generated />
 
@@ -234,10 +210,7 @@ await ui.setText(By.path('Object path'), 'Hello, World!');
 
 ### tryFinds <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="public"/> <s generated />
 
 ##### Arguments <s generated />
 
