--- a/docs/docs/api/client/typescript/classes/until.mdx
+++ b/docs/docs/api/client/typescript/classes/until.mdx
@@ -12,13 +12,7 @@ toc_max_heading_level: 4
 
 ### elementInteractable <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 - Wait until the UIElement received as a factor is interactive.
 
@@ -30,21 +24,9 @@ await gamium.wait(Until.elementInteractable(okButton));
 await okButton.click();
 ```
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 ##### Arguments <s generated />
 
@@ -60,13 +42,7 @@ await okButton.click();
 
 ### objectLocated <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 - Wait until the object is found to the Locator, wait until the object is found.
 
@@ -78,21 +54,9 @@ const okButton = await gamium.wait(
 );
 ```
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 ##### Arguments <s generated />
 
@@ -108,13 +72,7 @@ const okButton = await gamium.wait(
 
 ### objectsLocated <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 - Wait until the Objects corresponding to the Locator received as a factor are found.
 
@@ -126,21 +84,9 @@ const products = await gamium.wait(
 );
 ```
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 ##### Arguments <s generated />
 
