--- a/docs/docs/api/client/typescript/classes/key-by.mdx
+++ b/docs/docs/api/client/typescript/classes/key-by.mdx
@@ -14,13 +14,7 @@ The class used to request keystrokes in [Game Controling](gamium/client/game-con
 
 ### unityKeyboard <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 The type used by projects with [Unity Input System]( https://docs.unity3d.com/Packages/com.unity.inputsystem@latest) to enter the keyboard.
 
@@ -30,21 +24,9 @@ The type used by projects with [Unity Input System]( https://docs.unity3d.com/Pa
 await gamium.sendKey(KeyBy.unityKeyboard('Space'));
 ```
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 ##### Arguments <s generated />
 
@@ -58,13 +40,7 @@ await gamium.sendKey(KeyBy.unityKeyboard('Space'));
 
 ### unityKeycode <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 The type that is used for keyboard input in projects with [Unity Input Manager]( https://docs.unity3d.com/Manual/class-InputManager.html) .
 
@@ -74,21 +50,9 @@ The type that is used for keyboard input in projects with [Unity Input Manager](
 await gamium.sendKey(KeyBy.unityKeycode('Space'));
 ```
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
-<s childtag /> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="public"
-/> <code
-  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
-  children="static"
-/> <s generated />
+<s childtag /> <code  style={{ position: 'relative', top:'-20px', fontSize: '70%' }}  children="public"/> <code  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}  children="static"/> <s generated />
 
 ##### Arguments <s generated />
 
